intro 리포지토리 푸시

--- a/osulloc/index.html
+++ b/osulloc/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>일상 속 작은 순간의 행복, 오설록</title>
     <link rel="icon" href="img/osulloc_logo_icon.jpg">
     <link rel="stylesheet" href="css/layout.css">
@@ -19,7 +19,7 @@
 
     <div class="wrap">
         
-        <div class="main_bg"><video src="img/osulloc_bg.mp4" autoplay loop muted></video></div>
+        <div class="main_bg"><video src="img/osulloc_bg.mp4" autoplay playsinline loop muted></video></div>
         <div class="progress_bar">
             <div class="bar">
                 <div class="progress"></div>
@@ -133,7 +133,7 @@
                             비밀스런 공간에서 오설록의<br>
                             블렌디드 티를 체험하는 시간
                         </p>
-                        <a href="#">자세히보기</a>
+                        <a href="#none">자세히보기</a>
                     </div>
                 </li>
 
@@ -152,7 +152,7 @@
                             만들어보는 특별하고 따뜻한<br>
                             나만의 블렌디드 티타임
                         </p>
-                        <a href="#">자세히보기</a>
+                        <a href="#none">자세히보기</a>
                     </div>
                 </li>
 
@@ -170,7 +170,7 @@
                             차를 마시는 모든 순간<br>
                             순간을 함께합니다
                         </p>
-                        <a href="#">자세히보기</a>
+                        <a href="#none">자세히보기</a>
                     </div>
                 </li>
             </ul>
@@ -391,7 +391,7 @@
             <span class="ko">일상 속 작은 행복의 순간을 오설록이 함께 합니다</span>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="#none">
                         <img src="img/green_tea.jpg" alt="green tea image">
                         <div class="tea_txt">
                             <span class="ko">
@@ -409,7 +409,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="#none">
                         <img src="img/black_tea.jpg" alt="black_tea tea image">
                         <div class="tea_txt">
                             <span class="ko">
